umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_chloro-ethylamino-dimethyl-propoxy-propan-ol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 36
bond_count: 40
sum_formula: C29Cl2N3O
graph6: chCGGC@?G?_@?@??_?G?@??C?AG??_??C??@???O???_??@???@????_???G???@????G????G???GO?O???@???@C_???C?????o?????
