umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_clean-sgroups.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 48
bond_count: 42
sum_formula: C47
graph6: ohCGG?@?G?_@?@??_?G????C??G??G??C??@???G???_??@????????_???G???@????C????G????G????C????@???????????_????@?????@??????_?????G?????@?????????????G??????G??????C??????@???????G???????_??????@
