umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_clean-structure.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 26
sum_formula: C23N
graph6: YhCGGC@?G?_@?@??_?G?@??C??G??G??C??@??@????_??@???@???C_
