umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_contracted-fg-abbreviation.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 15
sum_formula: C11Cl3O4
graph6: QqCO_?@?OA???@?@??G?@??G??_
