umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_custom-template.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 19
sum_formula: C12Cl3O4
graph6: "RqCO_G@?G?_`?@??_?G?@?_?A??C??"
