umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_cyclic-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 26
sum_formula: C24
graph6: WhEI?C@?GC_C????_?G?@??C??G??G??C??@???G??G_?P?
