umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_ferrocene-radical-8-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 174
bond_count: 251
sum_formula: C140BCl3F4Fe5N2O11P6SW
graph6: "~?AmsP@`?OA?G_G?G????G?A??O??_?@???o??O??B???G???P???G???C????????@????K????O????O????G????AC??COW??????????@?????A?????A?????@??????????????????m???????_G??????C????@?A????@??????@O???????I@K??_????H???????C???????@???@O???????A???????C??????????????o????????O???@????C???G??????????????A?????A??o?????@?A@????O????@???????E?G?????????OK?A????@????????????????_?????????????????????C??????????A???????????O??????????@_????Q???C?????????G??_??????_??????????????????O???????O???A??????A?????G??????????A??????????????G????????????G??????????@?A?????????????_??????????C???????????????G?????????????O?????????????G?????????????AG?????????????O?????????????@??????????????A????????????_??_??????????????W???????O????????????????????C?G?????????????????????????????C????????????O???@???????????????@?????????C????C????????????@????C??C?????????????O???@????C@?????@????????????????`???????????AO????????@?o???_?C?????????????O??@??????????C????????????????????G????????@?????????????@@?????????????????????_?????????????????G?????????????G???@????????????????????????????????_????G??????????C???????G????????????@???O???????????????C????G??????????????@???A???????????????????C???????????G????@??????????????????????A???????????G????????_????A???????????????????B????????????????????G????G?O??????????G?????????????C???????????????C???????@?????????????????????_???????????@????????@??????????????????????????@????????????????_??????????????C?A???@??????????????G??????????????????????G????A????????????????A??????????????????????_????????????????????????????G??????????????????????O??????????????????????W??????????????????????C??????????????????????@???????????????????????O??????????????????????@???????????????????????C???????????????????????A???????????????????????@_??G?????????????_??????????????????????????????@???O????@???????O??????????A?????????????????????O????????????????????????_?????????????????????????????????????????????????@?????????????????????????O????????????????????????A?????????????????????????C?????????????????????????D?????????????????????????A?????????????????????????@??????????????????????????A???????????????????????????????????????????????G??????????????????????????O????????????????????????????????G??????????????????????????B????????????????O??????????????????????????????????????_???????????????????????@??@???????????????G??????????????????????????????????C?????_???????????????????????????????????????????????????????@????????????????@?????????????????????????????????@???????"
